@@ -1,3 +1,10 @@
+2006-12-05  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* cp-valprint.c (cp_print_value_fields): Initialize tmp_obstack.
+	(cp_print_value): Likewise.
+	* p-valprint.c (pascal_object_print_value_fields): Likewise.
+	(pascal_object_print_value): Likewise.
+
 2006-12-02  Joel Brobecker  <brobecker@adacore.com>
 
 	* version.in: Bump version number to 6.5.91 after first pre-release.
